[package]
name = "QCodeCloudAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
rouille = "3.6.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
reqwest = { version="0.12.15", features = ["blocking"] }